--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="container">
     <div class="header">Welcome to COOL COOLER</div>
-    <img src="https://via.placeholder.com/400" alt="Cool Cooler" class="cooler-image">
+    <img src="https://github.com/LfredPi/coolcooler/blob/main/COOLCOOLER.jpg?raw=true" alt="Cool Cooler" class="cooler-image">
     <div class="description">
       The coolest place to find the best coolers in the market. We provide top-tier cooling solutions for every need.
     </div>
