--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   </div>
   <div class="footer">&copy; 2025 COOL COOLER Inc. All rights reserved.</div>
   <script>
-  const numImages = 10; // Number of floating images
-  const imageUrl = "https://raw.githubusercontent.com/yourusername/coolcooler/main/floating-image.png"; // Your floating image URL
+  const numImages = 20; // Number of floating images
+  const imageUrl = "https://github.com/LfredPi/coolcooler/blob/main/image-removebg-preview.png?raw=true"; // Your floating image URL
 
   for (let i = 0; i < numImages; i++) {
     const img = document.createElement('img');
