--- a/index.html
+++ b/index.html
@@ -41,29 +41,43 @@
       font-size: 14px;
       opacity: 0.7;
     }
-    .floating-image {
+.floating-image {
   position: absolute;
   width: 50px;
   opacity: 0.8;
-  animation: float 10s linear infinite;
+  animation: float 8s ease-in-out infinite alternate, drift 12s ease-in-out infinite alternate;
 }
 
 @keyframes float {
   0% {
-    transform: translate(0, 0);
+    transform: translate(0, 0) rotate(0deg);
   }
   25% {
-    transform: translate(100px, 50px);
+    transform: translate(30px, -20px) rotate(10deg);
   }
   50% {
-    transform: translate(-50px, 100px);
+    transform: translate(-20px, 30px) rotate(-10deg);
   }
   75% {
-    transform: translate(-100px, -50px);
+    transform: translate(-30px, -10px) rotate(5deg);
   }
   100% {
-    transform: translate(0, 0);
+    transform: translate(0, 0) rotate(0deg);
   }
+}
+
+@keyframes drift {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 }
   </style>
 </head>
@@ -78,7 +92,7 @@
   </div>
   <div class="footer">&copy; 2025 COOL COOLER Inc. All rights reserved.</div>
   <script>
-  const numImages = 20; // Number of floating images
+  const numImages = 30; // Number of floating images
   const imageUrl = "https://github.com/LfredPi/coolcooler/blob/main/image-removebg-preview.png?raw=true"; // Your floating image URL
 
   for (let i = 0; i < numImages; i++) {
